# gestion-bibliothecaire

./: CMakeLists.txt  ajouterunlivre.cpp  ajouterunlivre.h  ajouterunlivre.ui  createlecteur.cpp  createlecteur.h  createlecteur.ui  database  database.sqbpro  databaseHeader.h  img.qrc  listlecteur.cpp  listlecteur.h  listlecteur.ui  listpret.cpp  listpret.h  listpret.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  modifierunlecteur.cpp  modifierunlecteur.h  modifierunlecteur.ui  modifierunlivre.cpp  modifierunlivre.h  modifierunlivre.ui  modifierunpret.cpp  modifierunpret.h  modifierunpret.ui  prete.cpp  prete.h  prete.ui  saisiedespretes.cpp  saisiedespretes.h  saisiedespretes.ui  situationlivre.cpp  situationlivre.h  situationlivre.ui  supprimerlecteur.cpp  supprimerlecteur.h  (+7 more)
